# imgPack

./: .gitignore  CMakeLists.txt  README.md  Taskfile.yml
cmake/: Linking.cmake
include/: stb.hpp  tiny-crc32.hpp  zstdpp.hpp
lib/: imgpacker.hpp  stb_impl.cpp
lib/core/: Loader.cpp  Loader.hpp  tiny-crc32.cpp
src/: main.cpp
